kernel/src/mm/process/address_space.h

typedef struct proc_aspace {
    address_space_t *as;
    vma_t *vmas;
    uint64_t brk_base;
    uint64_t brk;
    uint64_t brk_max;
} proc_aspace_t;
bool aspace_subsystem_init(void);
proc_aspace_t *aspace_create(void);
void aspace_destroy(proc_aspace_t *pa);
address_space_t *aspace_paging_handle(proc_aspace_t *pa);
uint64_t aspace_map_anon(proc_aspace_t *pa, uint64_t hint, size_t len, uint32_t prot);
bool aspace_unmap(proc_aspace_t *pa, uint64_t addr, size_t len);
bool aspace_protect(proc_aspace_t *pa, uint64_t addr, size_t len, uint32_t prot);
uint64_t aspace_brk(proc_aspace_t *pa, uint64_t new_brk);