kernel/src/mm/alloc/physical/pmm.h

bool pmm_init(void);
bool pmm_alloc_frame(uint64_t *out_phys);
bool pmm_alloc_zero_frame(uint64_t *out_phys);
bool pmm_alloc_frames(size_t count, uint64_t *out_phys);
bool pmm_alloc_frames_aligned(size_t count,
                              size_t align_frames,
                              uint64_t *out_phys);
bool pmm_free_frame(uint64_t phys);
bool pmm_free_frames(uint64_t phys, size_t count);